Implemented user log in and log out